<?xml version="1.0"?>
<package>
  <name>slam_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2623556566@qq.com">will</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
